--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "peerDependencies": {
     "@angular/compiler-cli": "0.0.0",
     "@bazel/concatjs": "5.0.1",
+    "@bazel/worker": "5.0.1",
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "rollup": "^2.56.3",
